# constrain

./: .gitignore  README.md  conda-environment.yaml  pyproject.toml
.github/workflows/: pytest.yaml
constrain/: __init__.py  grid.nc
constrain/arctic_oscillation/: __init__.py  arctic_oscillation_era5.py  download_era5_mslp.py  regrid_CanESM5.sh
constrain/datasets/: cmip6.py  cmip6_archive.py
constrain/eddy_feedback_parameter/: __init__.py  download_era5_daily_mean_uv_200-600hpa.py  download_era5_daily_mean_uv_250hpa.py  download_era5_uv_500hpa.py  efp_era5.py  lefp_era5.py
constrain/filters/: __init__.py
constrain/north_atlantic_oscillation/: __init__.py  nao_era5.py
constrain/sudden_stratospheric_warming/: __init__.py  download_era5_ssw_finder_fields.py  ssws_era5.py
tests/: conftest.py  test_constrain.py  test_eddy_feedback_parameter.py
